The path of signin and signup has been updated in website files.

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 			
 		    <ul class="nav pull-right">	
 				<li class="divider-vertical"></li>	      
-		        <li><a href="./signup.html" class="action action-primary">Start Free Trial!</a></li>
+		        <li><a href="app/signup.html" class="action action-primary">Start Free Trial!</a></li>
 		        <li><a href="app/signin.php" class="action">Demo</a></li>
 		    </ul>
 
