--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			
 		    <ul class="nav pull-right">	
 				<li class="divider-vertical"></li>	      
-		        <li><a href="./signup.html" class="action action-primary">Start Free Trial!</a></li>
+		        <li><a href="app/signup.html" class="action action-primary">Start Free Trial!</a></li>
 		        <li><a href="app/signin.php" class="action">Demo</a></li>
 		    </ul>
 
@@ -107,7 +107,7 @@
         			<br />
         			
         			<div class="masthead-actions">
-	        			<a href="./signup.html" class="btn  btn-primary">Signup Today!</a>
+	        			<a href="app/signup.html" class="btn  btn-primary">Signup Today!</a>
 	        			<a href="app/signin.php" class="btn">Demo</a>
         			</div>
         		</div> <!-- /.masthead-text -->
