--- a/portal/js/index.html
+++ b/portal/js/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=../signin.php">
+        <meta http-equiv="refresh" content="1;url=../index.php">
         <script type="text/javascript">
-            window.location.href = "../signin.php"
+            window.location.href = "../index.php"
         </script>
     </head>
     <body>
