*.php extension removed from the main files to hide from the user that we are using PHP

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		    <ul class="nav pull-right">	
 				<li class="divider-vertical"></li>	      
 		        <li><a href="app/signup.html" class="action action-primary">Start Free Trial!</a></li>
-		        <li><a href="app/signin.php" class="action">Demo</a></li>
+		        <li><a href="app/signin" class="action">Demo</a></li>
 		    </ul>
 
 
@@ -108,7 +108,7 @@
         			
         			<div class="masthead-actions">
 	        			<a href="app/signup.html" class="btn  btn-primary">Signup Today!</a>
-	        			<a href="app/signin.php" class="btn">Demo</a>
+	        			<a href="app/signin" class="btn">Demo</a>
         			</div>
         		</div> <!-- /.masthead-text -->
 				<div class="masthead-display">
