--- a/pricing.html
+++ b/pricing.html
@@ -45,7 +45,7 @@
 				<ul class="nav pull-right">	
 					<li class="divider-vertical"></li>	      
 					<li><a href="app/signup.html" class="action action-primary">Start Free Trial!</a></li>
-					<li><a href="app/signin.php" class="action">Demo</a></li>
+					<li><a href="app/signin" class="action">Demo</a></li>
 				</ul>
 
 
