--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=./signin.php">
+        <meta http-equiv="refresh" content="1;url=./signin">
         <script type="text/javascript">
-            window.location.href = "./signin.php"
+            window.location.href = "./signin"
         </script>
     </head>
     <body>
