--- a/app/signup.html
+++ b/app/signup.html
@@ -64,7 +64,7 @@
 		    <ul class="nav pull-right">	
 				<li class="divider-vertical"></li>	      
 		        <li><a href="signup.html" class="action action-primary">Start Free Trial!</a></li>
-		        <li><a href="signin.php" class="action">Demo</a></li>
+		        <li><a href="signin" class="action">Demo</a></li>
 		    </ul>
 
 
